force-app/default/objects/DocumentDetails__c/DocumentDetails__c.object-meta.xml
<CustomObject>
    <label>Document Details</label>
    <nameField>
        <displayFormat>DOCID-{0000}</displayFormat>
        <label>Document Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>