force-app/default/objects/DocumentDetails__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipLabel>Document Details</relationshipLabel>
    <relationshipName>Document_Details</relationshipName>
    <type>Lookup</type>
</CustomField>