force-app/default/objects/DocumentDetails__c/fields/IdentityProof__c.field-meta.xml
<CustomField>
    <fullName>IdentityProof__c</fullName>
    <label>Select Identity Proof Document</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Passbook</fullName>
            </value>
            <value>
                <fullName>Driving Licence</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>