force-app/default/objects/DocumentDetails__c/fields/IdNumber__c.field-meta.xml
<CustomField>
    <fullName>IdNumber__c</fullName>
    <label>Id Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>